# satellite-orbit-finder

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml
sql/: init_tables.sql
src/: main.rs
src/interface/: camera.rs  commons.rs  debris.rs  mod.rs  planet.rs  sat.rs
src/service/: mod.rs
test/: tle_exemple.json
