[package]
name = "satelite-orbit-finder"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
reqwest ={ version = "0.12.18", features = ["blocking", "cookies"]}
cookie_store ={ version = "*"}
dotenv = "0.15.0"
bevy = {version = "0.16"}
