[package]
name = "satelite-orbit-finder"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
reqwest ={ version = "0.12.23", features = ["blocking", "cookies"]} # for api requests
cookie_store ={ version = "0.22.0"} # for storage of api requests
dotenv = "0.15.0" # for stogare of api keys
bevy = {version = "0.17.2"} # main 3d interface
glam = {version = "0.30.8"} # for 3d vector
sgp4 ={ version = "2.3.0"} # for parsing tle data
chrono ={ version = "0.4.42" } # for UTC times
serde ={ version = "1.0.228"}
serde_json ={ version = "1.0.145"}